# django-poetry-sample

./: .gitignore  README.md  db.sqlite3  pyproject.toml
django_project/: settings.py  urls.py
